...
}

+ (NSArray<NSString *>*)supportedImageTypesPretty {
    return @[
             NSLocalizedString(@"None", "UTMLegacyQemuConfiguration"),
             NSLocalizedString(@"Disk Image", "UTMLegacyQemuConfiguration"),
             NSLocalizedString(@"CD/DVD (ISO) Image", "UTMLegacyQemuConfiguration"),
             NSLocalizedString(@"BIOS", "UTMLegacyQemuConfiguration"),
             NSLocalizedString(@"Linux Kernel", "UTMLegacyQemuConfiguration"),
             NSLocalizedString(@"Linux RAM Disk", "UTMLegacyQemuConfiguration"),
             NSLocalizedString(@"Linux Device Tree Binary", "UTMLegacyQemuConfiguration")
             ];
}
...
